--- a/css/CustomRules.css
+++ b/css/CustomRules.css
@@ -1,5 +1,9 @@
 /* mobile_spacing on the index page for the first column in the skills section to make it left aligned aligned for mobile */
 
+#RESIZABLE {
+	cursor: pointer;
+}
+
 .hover-effect img {
     transition: transform 0.4s;
 }
